--- a/3d earth/package.json
+++ b/3d earth/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-plugin-string": "1.1.2"
+  },
+  "dependencies": {
+    "three": "0.138.3"
   }
 }
